tag:/ better handle uds name field

Break the loop in stat since the first element is "." or the file.

BUG: 449126